--- a/index.html
+++ b/index.html
@@ -6,7 +6,28 @@
         <title>The Odin Project: Calculator</title>
     </head>
     <body>
-
+        <div class="calculator">
+            <div class="display"></div>
+            <div class="clear">AC</div>
+            <div class="negative">+/-</div>
+            <div class="percent">%</div>
+            <div class="division">/</div>
+            <div class="seven">7</div>
+            <div class="eight">8</div>
+            <div class="nine">9</div>
+            <div class="multiplication">X</div>
+            <div class="four">4</div>
+            <div class="five">5</div>
+            <div class="six">6</div>
+            <div class="subtraction">-</div>
+            <div class="one">1</div>
+            <div class="two">2</div>
+            <div class="three">3</div>
+            <div class="addition">+</div>
+            <div class="zero">0</div>
+            <div class="decimal">.</div>
+            <div class="equal">=</div>
+        </div>
     </body>
     <script src="main.js"></script>
 </html>
