Created initial operator and operate functions

--- a/index.html
+++ b/index.html
@@ -7,26 +7,26 @@
     </head>
     <body>
         <div class="calculator">
-            <div class="display"></div>
-            <div class="clear">AC</div>
-            <div class="negative">+/-</div>
-            <div class="percent">%</div>
-            <div class="division">/</div>
-            <div class="seven">7</div>
-            <div class="eight">8</div>
-            <div class="nine">9</div>
-            <div class="multiplication">X</div>
-            <div class="four">4</div>
-            <div class="five">5</div>
-            <div class="six">6</div>
-            <div class="subtraction">-</div>
-            <div class="one">1</div>
-            <div class="two">2</div>
-            <div class="three">3</div>
-            <div class="addition">+</div>
-            <div class="zero">0</div>
-            <div class="decimal">.</div>
-            <div class="equal">=</div>
+            <div class="display">DISPLAY</div>
+            <button class="clear">AC</button>
+            <button class="negative">+/-</button>
+            <button class="percent">%</button>
+            <button class="division">/</button>
+            <button class="seven">7</button>
+            <button class="eight">8</button>
+            <button class="nine">9</button>
+            <button class="multiplication">X</button>
+            <button class="four">4</button>
+            <button class="five">5</button>
+            <button class="six">6</button>
+            <button class="subtraction">-</button>
+            <button class="one">1</button>
+            <button class="two">2</button>
+            <button class="three">3</button>
+            <button class="addition">+</button>
+            <button class="zero">0</button>
+            <button class="decimal">.</button>
+            <button class="equal">=</button>
         </div>
     </body>
     <script src="main.js"></script>
