Change class names for buttons and added events

--- a/index.html
+++ b/index.html
@@ -7,26 +7,26 @@
     </head>
     <body>
         <div class="calculator">
-            <div class="display">DISPLAY</div>
+            <div class="display"></div>
             <button class="clear">AC</button>
             <button class="negative">+/-</button>
-            <button class="percent">%</button>
-            <button class="division">/</button>
-            <button class="seven">7</button>
-            <button class="eight">8</button>
-            <button class="nine">9</button>
-            <button class="multiplication">X</button>
-            <button class="four">4</button>
-            <button class="five">5</button>
-            <button class="six">6</button>
-            <button class="subtraction">-</button>
-            <button class="one">1</button>
-            <button class="two">2</button>
-            <button class="three">3</button>
-            <button class="addition">+</button>
-            <button class="zero">0</button>
-            <button class="decimal">.</button>
-            <button class="equal">=</button>
+            <button class="%">%</button>
+            <button class="/">/</button>
+            <button class="7">7</button>
+            <button class="8">8</button>
+            <button class="9">9</button>
+            <button class="X">X</button>
+            <button class="4">4</button>
+            <button class="5">5</button>
+            <button class="6">6</button>
+            <button class="-">-</button>
+            <button class="1">1</button>
+            <button class="2">2</button>
+            <button class="3">3</button>
+            <button class="+">+</button>
+            <button class="0" id="zero">0</button>
+            <button class=".">.</button>
+            <button class="=">=</button>
         </div>
     </body>
     <script src="main.js"></script>
