Adjust class names and ids of number buttons

--- a/index.html
+++ b/index.html
@@ -12,21 +12,23 @@
             <button class="negative">+/-</button>
             <button class="%">%</button>
             <button class="/">/</button>
-            <button class="7">7</button>
-            <button class="8">8</button>
-            <button class="9">9</button>
             <button class="X">X</button>
-            <button class="4">4</button>
-            <button class="5">5</button>
-            <button class="6">6</button>
             <button class="-">-</button>
-            <button class="1">1</button>
-            <button class="2">2</button>
-            <button class="3">3</button>
             <button class="+">+</button>
-            <button class="0" id="zero">0</button>
             <button class=".">.</button>
             <button class="=">=</button>
+            <div class="numbers">
+                <button class='number' id="seven">7</button>
+                <button class='number' id="eight">8</button>
+                <button class='number' id="nine">9</button>
+                <button class='number' id="four">4</button>
+                <button class='number' id="five">5</button>
+                <button class='number' id="six">6</button>
+                <button class='number' id="one">1</button>
+                <button class='number' id="two">2</button>
+                <button class='number' id="three">3</button>
+                <button class='number' id="zero">0</button>
+            </div>
         </div>
     </body>
     <script src="main.js"></script>
