Rearrange order of classes in calculator div

--- a/index.html
+++ b/index.html
@@ -10,25 +10,23 @@
             <div class="display"></div>
             <button class="clear">AC</button>
             <button class="negative">+/-</button>
-            <button class="%">%</button>
-            <button class="/">/</button>
-            <button class="X">X</button>
-            <button class="-">-</button>
-            <button class="+">+</button>
-            <button class=".">.</button>
-            <button class="=">=</button>
-            <div class="numbers">
-                <button class='number' id="seven">7</button>
-                <button class='number' id="eight">8</button>
-                <button class='number' id="nine">9</button>
-                <button class='number' id="four">4</button>
-                <button class='number' id="five">5</button>
-                <button class='number' id="six">6</button>
-                <button class='number' id="one">1</button>
-                <button class='number' id="two">2</button>
-                <button class='number' id="three">3</button>
-                <button class='number' id="zero">0</button>
-            </div>
+            <button class="percent">%</button>
+            <button class="divide">/</button>
+            <button class='number' id="seven">7</button>
+            <button class='number' id="eight">8</button>
+            <button class='number' id="nine">9</button>
+            <button class="multiply">X</button>
+            <button class='number' id="four">4</button>
+            <button class='number' id="five">5</button>
+            <button class='number' id="six">6</button>
+            <button class="subtract">-</button>
+            <button class='number' id="one">1</button>
+            <button class='number' id="two">2</button>
+            <button class='number' id="three">3</button>
+            <button class="add">+</button>
+            <button class='number' id="zero">0</button>
+            <button class="decimal">.</button>
+            <button class="equal">=</button>
         </div>
     </body>
     <script src="main.js"></script>
