clean up code by creating operator class

--- a/index.html
+++ b/index.html
@@ -11,19 +11,19 @@
             <button class="clear">AC</button>
             <button class="negative">+/-</button>
             <button class="percent">%</button>
-            <button class="divide">/</button>
+            <button class='operator' id="divide">/</button>
             <button class='number' id="seven">7</button>
             <button class='number' id="eight">8</button>
             <button class='number' id="nine">9</button>
-            <button class="multiply">X</button>
+            <button class='operator' id="multiply">X</button>
             <button class='number' id="four">4</button>
             <button class='number' id="five">5</button>
             <button class='number' id="six">6</button>
-            <button class="subtract">-</button>
+            <button class='operator'id="subtract">-</button>
             <button class='number' id="one">1</button>
             <button class='number' id="two">2</button>
             <button class='number' id="three">3</button>
-            <button class="add">+</button>
+            <button class='operator' id="add">+</button>
             <button class='number' id="zero">0</button>
             <button class="decimal">.</button>
             <button class="equal">=</button>
