Aligned grid and removed operator fill when clear

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <title>The Odin Project: Calculator</title>
     </head>
     <body>
+        <div class="flex-container">
         <div class="calculator">
             <div class="display"></div>
             <button class="clear">AC</button>
@@ -27,6 +28,7 @@
             <button class='number' id="zero">0</button>
             <button class="decimal">.</button>
             <button class="equal">=</button>
+        </div>
         </div>
     </body>
     <script src="main.js"></script>
