Create scientific notation functionality

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
         <div class="calculator">
             <div class="display"></div>
             <button class="clear">AC</button>
+            <button class="delete">del</button>
             <button class="negative">+/-</button>
-            <button class="percent">%</button>
             <button class='operator' id="divide">/</button>
             <button class='number' id="seven">7</button>
             <button class='number' id="eight">8</button>
