--- a/index.html
+++ b/index.html
@@ -12,19 +12,19 @@
             <button class="clear">AC</button>
             <button class="delete">del</button>
             <button class="negative">+/-</button>
-            <button class='operator' id="divide">/</button>
+            <button class='operator' id="divide" id="/">/</button>
             <button class='number' id="seven">7</button>
             <button class='number' id="eight">8</button>
             <button class='number' id="nine">9</button>
-            <button class='operator' id="multiply">X</button>
+            <button class='operator' id="multiply" id="x">x</button>
             <button class='number' id="four">4</button>
             <button class='number' id="five">5</button>
             <button class='number' id="six">6</button>
-            <button class='operator'id="subtract">-</button>
+            <button class='operator'id="subtract" id="-">-</button>
             <button class='number' id="one">1</button>
             <button class='number' id="two">2</button>
             <button class='number' id="three">3</button>
-            <button class='operator' id="add">+</button>
+            <button class='operator' id="add" id="+">+</button>
             <button class='number' id="zero">0</button>
             <button class="decimal">.</button>
             <button class="equal">=</button>
