--- a/index.html
+++ b/index.html
@@ -6,12 +6,16 @@
         <title>The Odin Project: Calculator</title>
     </head>
     <body>
+        <div class="header">
+            <h1>My Calculator</h1>
+            <div class ='name'>TYLER RANDALL</div>
+        </div>
         <div class="flex-container">
         <div class="calculator">
             <div class="display"></div>
-            <button class="clear">AC</button>
-            <button class="delete">del</button>
-            <button class="negative">+/-</button>
+            <button class='misc' id="clear">AC</button>
+            <button class='misc' id="delete">del</button>
+            <button class='misc' id="negative">+/-</button>
             <button class='operator' id="divide" id="/">/</button>
             <button class='number' id="seven">7</button>
             <button class='number' id="eight">8</button>
@@ -26,10 +30,14 @@
             <button class='number' id="three">3</button>
             <button class='operator' id="add" id="+">+</button>
             <button class='number' id="zero">0</button>
-            <button class="decimal">.</button>
-            <button class="equal">=</button>
+            <button class='misc' id="decimal">.</button>
+            <button class='misc' id="equal">=</button>
         </div>
+        </div>
+        <div class="footer">
+            <div>Project for THE ODIN PROJECT</div>
+            <button>github</button>
         </div>
     </body>
-    <script src="main2.js"></script>
+    <script src="main.js"></script>
 </html>
